# cpp-playground

./: CMakeLists.txt
concepts/: CMakeLists.txt
concepts/src/: main.cxx
hdrimpl/: CMakeLists.txt
hdrimpl/bar/: CMakeLists.txt
hdrimpl/bar/include/bar/: Bar.hxx
hdrimpl/bar/src/: Bar.cxx
hdrimpl/foo/: CMakeLists.txt
hdrimpl/foo/include/foo/: Foo.hxx
hdrimpl/foo/src/: Foo.cxx
hdrimpl/hdrlib/: CMakeLists.txt
hdrimpl/hdrlib/include/hdrlib/: Simple.hxx
hdrimpl/hdrtest/: CMakeLists.txt
hdrimpl/hdrtest/src/: main.cxx
net/: CMakeLists.txt
net/src/: cleanup.cxx  cleanup.hxx  getaddrinfo.cxx  getaddrinfo.hxx  getifaddrs.cxx  getifaddrs.hxx  iface.cxx  iface.hxx  inaddr_storage.hxx  logging.hxx  main.cxx  net.cxx  net.hxx  overloaded.hxx  sock.cxx  sock.hxx  socket_type.hxx  to_string.cxx  to_string.hxx  udpsock.cxx  udpsock.hxx  visit_utils.hxx
sloc/: CMakeLists.txt
sloc/src/: main.cxx
slog/: CMakeLists.txt
slog/src/: main.cxx
slog/src/slog/: level.hxx  slog.hxx  slog_impl.cxx  slog_impl.hxx  wrap_fmt.hxx
xmacros/: CMakeLists.txt
xmacros/include/macros/: enum_utils.h  overloading.h
xmacros/src/: main.cxx
